# xaudio2py

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: multi_play_demo.py  play_mp3.py  play_wav.py
src/xaudio2py/: __init__.py
src/xaudio2py/api/: __init__.py  engine.py  sound.py
src/xaudio2py/backends/: __init__.py  null_backend.py
src/xaudio2py/backends/xaudio2/: __init__.py  backend.py  bindings.py  com.py  dll.py  interfaces.py  utils.py  voices.py
src/xaudio2py/concurrency/: __init__.py  worker.py
src/xaudio2py/core/: __init__.py  exceptions.py  interfaces.py  models.py  registry.py  thread.py
src/xaudio2py/formats/: __init__.py  mp3.py  wav.py
src/xaudio2py/services/: __init__.py  engine_lifecycle.py  playback.py
src/xaudio2py/utils/: log.py  validate.py
tests/: __init__.py  test_engine_logic.py  test_thread_dispatch.py  test_wav_parser.py
